--- a/style.css
+++ b/style.css
@@ -50,13 +50,13 @@ box-sizing: border-box;
     position: absolute;
     width: 70px;
     height: 70px;
-    border: 2px solid yellow;
+    border: 1px solid rgb(255, 255, 255);
     border-radius: 50%;
-    background-color: rgb(253, 253, 30);
+    background-color: white;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    box-shadow: 0 0 15px 15px rgba(255, 255, 0, 0.6);
+    box-shadow: 0 0 180px 180px rgba(255, 255, 0, 0.3);
 }
 
 .venus{
@@ -64,11 +64,11 @@ box-sizing: border-box;
     width: 25px;
     height: 25px;
     border-radius: 50%;
-    background-color: rgb(248, 226, 176);
+    background-color: rgb(255, 115,0);
     top:5%;
     left:80%;
     z-index: 1;
-    box-shadow: 0 0 5px 5px rgba(248, 226, 176,0.5);
+    box-shadow: 0 0 5px 5px rgba(255, 110, 0,0.5);
 }
 .mercury{
     position: absolute;
@@ -94,7 +94,7 @@ box-sizing: border-box;
 }
 .orbit {
     position: absolute;
-    top: 0;
+    top: -15px;
     left:-45px;
     width: 120px;       
     height: 60px;
@@ -112,8 +112,7 @@ box-sizing: border-box;
     box-shadow: 0 0 5px 5px rgb(162, 152, 152, 0.6);
 }
 @keyframes rotate {
-    0% { transform:  rotate(0deg); }
-    100% {transform: rotate(360deg); }
+100% {transform: rotate(360deg); }
 }
 
 
